<resources>
    <string name="app_name">QuickCheck</string>
    <string name="studentOneName">Name One</string>
    <string name="studentOneLastName">Last name One</string>
    <string name="studentTwoName">Name Two</string>
    <string name="studentTwoLastName">Last name Two</string>
    <string name="studentThreeName">Name Three</string>
    <string name="studentThreeLastName">Last name Three</string>
    <string name="studentFourName">Name Four</string>
    <string name="studentFourLastName">Last name Four</string>
    <string name="studentFiveName">Name Five</string>
    <string name="studentFiveLastName">Last name Five</string>
    <string name="logOut">Log out</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_address">Email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login_button">Login</string>
    <string name="year_1">Year 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title">Choose a group</string>

</resources>